# Semestralni_projekt

./: CMakeLists.txt
Semestralni_projekt/: CMakeLists.txt  Semestralni_projekt.cpp  Semestralni_projekt.h
